# marketmind-ai

./: .gitignore  AGENTS.md  README.md  dev-down.sh  dev-up.sh  package-lock.json  package.json  skills-lock.json  upgrade the discovery agent flow.txt
services/ai/: .env.example  README.md  pyproject.toml
services/ai/app/: main.py
services/ai/app/api/: health.py
services/ai/app/core/: config.py  errors.py
services/ai/app/discovery/: prompt_versions.py  prompts.py  question_language.py  research_context_pack.py  schemas.py  service.py
services/ai/app/embeddings/: __init__.py  base.py  factory.py  fake_provider.py  openai_provider.py  schemas.py
services/ai/app/providers/: base.py  factory.py  gemini_provider.py  mock_provider.py  mock_suggestions.py  openai_provider.py  openrouter_provider.py
services/ai/app/qdrant/: __init__.py  client.py  collection.py  indexes.py  points.py  schemas.py
services/ai/app/rag/: __init__.py  config.py
services/ai/app/search/: deterministic_query_planner.py  evidence_triage_service.py  llm_evidence_triage.py  llm_query_planner.py  query_planning_service.py  schemas.py
services/ai/tests/: conftest.py  test_discovery_evaluation_cases.py  test_discovery_service.py  test_embeddings_provider.py  test_evidence_triage_service.py  test_qdrant_business_profile_guard.py  test_qdrant_client.py  test_qdrant_health.py  test_qdrant_lifespan.py  test_query_planning_deterministic.py  test_query_planning_endpoint.py  test_query_planning_fixtures.py  test_query_planning_llm_adapters.py  test_query_planning_service.py  test_rag_config.py
(+491 files in other folders)
