[project]
name = "marketmind-ai-service"
version = "0.1.0"
description = "FastAPI AI service for MarketMind Prepared Discovery."
requires-python = ">=3.12"
dependencies = [
  "anyio>=4.9.0",
  "fastapi>=0.115.0",
  "google-genai>=1.24.0",
  "openai>=1.93.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "qdrant-client>=1.13.0",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "integration: tests that require a running Qdrant instance",
]
